# miden-starter

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
masm/accounts/: calculator.masm
masm/scripts/: calculate.masm
src/: common.rs  lib.rs  main.rs
src/deploy/: account.rs  constants.rs  contract.rs  mod.rs
