[package]
name = "miden_starter"
version = "0.1.0"
edition = "2024"

[dependencies]
miden-client = { version = "0.11.0", features = ["testing", "tonic", "sqlite"] }
miden-lib = { version = "0.11.0", default-features = false }
miden-objects = { version = "0.11.0", default-features = false }
miden-crypto = { version = "0.15.0"}
miden-assembly = "0.15.0"
rand = { version = "0.9" }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
tracing = "0.1.4"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
